Save SBOM metadata on detect - SBOM-1070 (#12861)